--- a/frontend/public/Dean/DeanDashboard_Approved.html
+++ b/frontend/public/Dean/DeanDashboard_Approved.html
@@ -9,7 +9,7 @@
     href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet"
   />
-  <title>รายการคำร้อง</title>
+  <title>คำร้องที่อนุมัติ</title>
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/Advisor.css">
   <link rel="stylesheet" href="/css/template.css">
@@ -21,9 +21,9 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="/Instructor/InstructorDashboard_Home.html">รายการคำร้อง</a>
-        <a href="/Instructor/InstructorDashboard_Approved.html">คำร้องที่อนุมัติ</a>
-        <a class="active" href="/Instructor/InstructorDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
+        <a href="/Dean/DeanDashboard_Home.html">รายการคำร้อง</a>
+        <a class="active" href="/Dean/DeanDashboard_Approved.html">คำร้องที่อนุมัติ</a>
+        <a href="/Dean/DeanDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
@@ -31,24 +31,26 @@
   <div class="content">
     <div class="header__container">
       <div>
-        <h1>คำร้องที่ปฏิเสธ</h1>
-        <p>คำร้องที่ไม่ได้รับการอนุมัติ </p>
+        <h1>คำร้องที่อนุมัติ</h1>
+        <p>คำร้องที่ได้ทำการอนุมัติเรียบร้อยแล้ว</p>
       </div>
     </div>
-    
+
+
     <div class="application__container" id="Application_Approved">
       <table class="application-table">
         <thead>
           <tr>
             <th>ยื่นคำร้องเมื่อ</th>
             <th>ประเภทคำร้อง</th>
-            <th>ปฏิเสธคำร้องโดย</th>
+            <th>อนุมัติคำร้องโดย</th>
             <th>สถานะ</th>
           </tr>
         </thead>
-        <tbody id="rejectedTableBody"></tbody>
+        <tbody id="approvedTableBody"></tbody>
       </table>
     </div>
-  <script src="/js/InstructorDashboard.js"></script>
+  <!-- Link to JavaScript -->
+  <script src="/js/DeanDashboard.js"></script>
 </body>
 </html>
