--- a/frontend/public/Dean/DeanDashboard_Rejected.html
+++ b/frontend/public/Dean/DeanDashboard_Rejected.html
@@ -21,9 +21,9 @@
         alt="Thammasat University Logo"
       />
       <div class="menu">
-        <a href="/Instructor/InstructorDashboard_Home.html">รายการคำร้อง</a>
-        <a href="/Instructor/InstructorDashboard_Approved.html">คำร้องที่อนุมัติ</a>
-        <a class="active" href="/Instructor/InstructorDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
+        <a href="/Dean/DeanDashboard_Home.html">รายการคำร้อง</a>
+        <a href="/Dean/DeanDashboard_Approved.html">คำร้องที่อนุมัติ</a>
+        <a class="active" href="/Dean/DeanDashboard_Rejected.html">คำร้องที่ปฏิเสธ</a>
       </div>
       <a class="logout" onclick="logout()">Log out</a>
     </div>
@@ -49,6 +49,6 @@
         <tbody id="rejectedTableBody"></tbody>
       </table>
     </div>
-  <script src="/js/InstructorDashboard.js"></script>
+  <script src="/js/DeanDashboard.js"></script>
 </body>
 </html>
