--- a/frontend/public/Instructor/InstructorDashboard_Home.html
+++ b/frontend/public/Instructor/InstructorDashboard_Home.html
@@ -11,7 +11,7 @@
   />
   <title>รายการคำร้อง</title>
   <link rel="stylesheet" href="/css/main.css">
-  <link rel="stylesheet" href="/css/Instructor.css">
+  <link rel="stylesheet" href="/css/Advisor.css">
   <link rel="stylesheet" href="/css/template.css">
   </head>
   <body>
