feat: rejection reason block

--- a/frontend/public/form_view/resign.html
+++ b/frontend/public/form_view/resign.html
@@ -164,8 +164,42 @@
             class="form-input explanation-box"
             readonly
           ></textarea>
+          <div class="form-group">
+            <label for="instructorReason" class="form-label">
+                เหตุผลของอาจารย์ผู้สอน
+            </label>
+            <textarea
+                id="instructorReason"
+                name="instructorReason"
+                class="form-input explanation-box"
+                readonly
+            ></textarea>
         </div>
-      
+        
+        <div class="form-group">
+            <label for="deanReason" class="form-label">
+                เหตุผลของคณบดี
+            </label>
+            <textarea
+                id="deanReason"
+                name="deanReason"
+                class="form-input explanation-box"
+                readonly
+            ></textarea>
+        </div>
+        <div class="form-group rejection-reason-container hidden">
+          <label for="rejectionReason" class="form-label">
+              เหตุผลการปฏิเสธ
+          </label>
+          <textarea
+              id="rejectionReason"
+              name="rejectionReason"
+              class="form-input explanation-box"
+              readonly
+          ></textarea>
+        </div>
+        </div>
+      </form>
     <script src="/js/form_view.js"></script>
     <script src="../js/fileattachment.js"></script>
   </body>
