--- a/frontend/public/form_view/withdraw_course.html
+++ b/frontend/public/form_view/withdraw_course.html
@@ -231,6 +231,40 @@
             class="form-input explanation-box"
             readonly
           ></textarea>
+          <div class="form-group">
+            <label for="instructorReason" class="form-label">
+                เหตุผลของอาจารย์ผู้สอน
+            </label>
+            <textarea
+                id="instructorReason"
+                name="instructorReason"
+                class="form-input explanation-box"
+                readonly
+            ></textarea>
+        </div>
+        
+        <div class="form-group">
+            <label for="deanReason" class="form-label">
+                เหตุผลของคณบดี
+            </label>
+            <textarea
+                id="deanReason"
+                name="deanReason"
+                class="form-input explanation-box"
+                readonly
+            ></textarea>
+        </div>
+        <div class="form-group rejection-reason-container hidden">
+          <label for="rejectionReason" class="form-label">
+              เหตุผลการปฏิเสธ
+          </label>
+          <textarea
+              id="rejectionReason"
+              name="rejectionReason"
+              class="form-input explanation-box"
+              readonly
+          ></textarea>
+        </div>
         </div>
 
       </form>
