fix: backend Controller and fix resign.html

--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
               <label for="department" class="form-label">สาขาวิชา <span class="required">*</span></label>
-              <input  type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
+              <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
             </div>
           </div>
       
