fix: delete test data

--- a/frontend/public/request_list.html
+++ b/frontend/public/request_list.html
@@ -48,19 +48,7 @@
             <th>Status</th>
           </tr>
         </thead>
-        <tbody id="pendingTableBody">
-          <tr>
-            <td>001</td>
-            <td>2024-11-25</td>
-            <td>12345678</td>
-            <td>นายสมชาย ใจดี</td>
-            <td>คำร้องขอเอกสาร</td>
-            <td>
-              <button class="button button__approve" onclick="approveRequest(001)">อนุมัติ</button>
-              <button class="button button__reject" onclick="rejectRequest(001)">ไม่อนุมัติ</button>
-            </td>
-          </tr>
-        </tbody>
+        <tbody id="pendingTableBody"></tbody>
       </table>
     </div>
   </div>
