Feature/employee dashboard (#23)
* feat: backend using nodejs

* feat: API Gateway

* feat: file attachment boilerplate

* Update application properties for UTF-8 encoding and add database configuration

* recover: index.js file using with index.html

* Prevent page refresh on file attachment button click

* fix: browse button event preventDefault

* feat: add employee dashboard

* fix: saved draft button validation skipping

* fix: make form fields which are autofilled be readonly field

* feat: add file acttachment to html forms

* feat: Uploadfile

* feat: Update form fields and properties for consistency and file upload limits

* refactor: Rename form_type to subject for consistency across forms

* feat: Dashboard

* feat: Refactor form population logic and enhance popup display functionality

* feat: Enhance form submission logic with explicit mapping and conflict avoidance

* feat: Remove file path handling from Request and related methods in RequestController and RequestService

* feat: Add year field to Request model and update related methods in RequestController and RequestService

* fix: change some dashboard

* feat: fetch data from data to Employee_form

* fix: sumbit button,reject button,Backend for employee

* fix: change some css and js

* fix: fix js in dashboard,index

* feat: View button in index.html

* fix: some html and application.properties

* fix: main.css and change word in Dashboard.js

* fix: change html form path and form_view.js and login.js

* fix: update database password in application.properties

* feat: add reason in approve button

* fix: add dean,instructor reason and fix Formstatus from pending to waiting for advisor

* fix: rename all Employee to Advisor

* feat: Add for instructor approved rejected and fix some path

* feat: Add dean

* feat: rejection reason block

* fix: backend Controller and fix resign.html

---------

Co-authored-by: krittamark <334

--- a/frontend/public/Advisor/delayed_registration.html
+++ b/frontend/public/Advisor/delayed_registration.html
@@ -19,12 +19,12 @@
     <div class="sidebar">
       <ul>
         <li>
-          <a href="/template/template.html" class="back-link">
+          <a href="/Advisor/AdvisorDashboard_Home.html" class="back-link">
             <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 60 60" fill="none">
               <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z"
                 fill="#515151" />
             </svg>
-            <h4>เลือกแบบฟอร์ม<br>คำร้องที่ต้องการ</h4>
+            <h4>เลือกรายการคำร้อง<br>ที่ต้องการ</h4>
           </a>
         </li>
       </ul>
@@ -183,13 +183,13 @@
           <!-- ปุ่มอัปโหลดไฟล์ -->
           <button id="submitFilesButton" class="submit-files-button hidden">อัปโหลดไฟล์</button>
 
-        <div class="button-group">
-          <button type="button" class="draft-button">บันทึกแบบร่าง</button>
-          <button type="submit" class="submit-button">ส่งคำร้อง</button>
-        </div>
+          <div class="button-group">
+            <button type="button" class="approve-button">อนุมัติ</button>
+            <button type="button" class="reject-button">ไม่อนุมัติ</button>
+          </div>
       </form>
     </div>
-    <script src="/js/form.js"></script>
+    <script src="/js/AdvisorForm.js"></script>
     <script src="../js/fileattachment.js"></script>
 </body>
 
