--- a/frontend/public/Dean/resign.html
+++ b/frontend/public/Dean/resign.html
@@ -15,11 +15,11 @@
       <div class="sidebar">
         <ul>
           <li>
-            <a href="/template/template.html" class="back-link">
+            <a href="/Dean/DeanDashboard_Home.html" class="back-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 60 60" fill="none">
                 <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
                 </svg>
-                <h4>เลือกแบบฟอร์ม<br>คำร้องที่ต้องการ</h4>
+                <h4>เลือกรายการคำร้อง<br>ที่ต้องการ</h4>
             </a>
           </li>
         </ul>
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
               <label for="department" class="form-label">สาขาวิชา <span class="required">*</span></label>
-              <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
+              <input  type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
             </div>
           </div>
       
@@ -154,14 +154,13 @@
           <p>ไฟล์ที่แนบ:</p>
           <ul id="fileList"></ul>
         </div>
-          <div class="button-group">
-            <button type="button" class="draft-button">บันทึกแบบร่าง</button>
-            <button type="submit" class="submit-button">ส่งคำร้อง</button>
-          </div>
+        <div class="button-group">
+          <button type="button" class="approve-button">อนุมัติ</button>
+          <button type="button" class="reject-button">ไม่อนุมัติ</button>
+        </div>
         </form>
       </div>
-      
-    <script src="/js/form.js"></script>
-    <script src="../js/fileattachment.js"></script>
+      <script src="/js/DeanForm.js"></script>
+      <script src="../js/fileattachment.js"></script>
   </body>
 </html>
