--- a/frontend/public/Dean/withdraw_course.html
+++ b/frontend/public/Dean/withdraw_course.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <title>คำร้องขอถอนรายวิชา (Drop W)</title>
     <link rel="stylesheet" href="/css/form_styles.css" />
     <link rel="stylesheet" href="../css/fileattachment.css" />
@@ -15,11 +16,11 @@
       <div class="sidebar">
         <ul>
           <li>
-            <a href="/template/template.html" class="back-link">
+            <a href="/Dean/DeanDashboard_Home.html" class="back-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 60 60" fill="none">
                 <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
                 </svg>
-                <h4>เลือกแบบฟอร์ม<br>คำร้องที่ต้องการ</h4>
+                <h4>เลือกรายการคำร้อง<br>ที่ต้องการ</h4>
             </a>
           </li>
         </ul>
@@ -222,12 +223,12 @@
         </div>
 
         <div class="button-group">
-          <button type="button" class="draft-button">บันทึกแบบร่าง</button>
-          <button type="submit" class="submit-button">ส่งคำร้อง</button>
+          <button type="button" class="approve-button">อนุมัติ</button>
+          <button type="button" class="reject-button">ไม่อนุมัติ</button>
         </div>
       </form>
     </div>
-    <script src="/js/form.js"></script>
+    <script src="/js/DeanForm.js"></script>
     <script src="../js/fileattachment.js"></script>
   </body>
 </html>
