--- a/frontend/public/form_view/reg_request.html
+++ b/frontend/public/form_view/reg_request.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Thai:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>คำร้องขอถอนรายวิชา (Drop W)</title>
+    <title>คำร้องขอจดทะเบียนรายวิชาข้ามหลักสูตร</title>
     <link rel="stylesheet" href="/css/form_styles.css" />
     <link rel="stylesheet" href="../css/fileattachment.css" />
   </head>
@@ -15,7 +15,7 @@
       <div class="sidebar">
         <ul>
           <li>
-            <a href="/template/template.html" class="back-link">
+            <a href="/index.html" class="back-link">
               <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 60 60" fill="none">
                 <path d="M50 27.5001V32.5H20L33.75 46.25L30.2 49.8L10.4 30L30.2 10.2001L33.75 13.7501L20 27.5001H50Z" fill="#515151"/>
                 </svg>
@@ -24,8 +24,9 @@
           </li>
         </ul>
       </div>
+      
     <div class="container">
-      <h1 class="topic">คำร้องขอถอนรายวิชา (Drop W)</h1>
+      <h1 class="topic">คำร้องขอจดทะเบียนรายวิชาข้ามหลักสูตร</h1>
 
       <div class="divider"></div>
 
@@ -38,52 +39,34 @@
             <input type="date" id="date" name="date" class="form-input" placeholder="DD/MM/YYYY" required />
           </div>
           <div class="form-group">
-            <label for="subject" class="form-label"
-              >เรื่อง <span class="required">*</span></label
-            >
-            <input
-              readonly
-              type="text"
-              id="subject"
-              class="form-input"
-              placeholder="เรื่อง"
-              required
-            />
+            <label for="subject" class="form-label">เรื่อง <span class="required">*</span></label>
+            <input readonly type="text" id="subject" class="form-input" placeholder="เรื่อง" required />
           </div>
         </div>
 
         <div class="form-row">
           <div class="form-group">
-            <label for="full-name" class="form-label"
-              >ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label
-            >
+            <label for="full-name" class="form-label">ชื่อ-นามสกุล (ใส่คำนำหน้า) <span class="required">*</span></label>
             <input readonly type="text" id="full_name" name="fullName" class="form-input" placeholder="ชื่อ-นามสกุล" required />
           </div>
           <div class="form-group">
-            <label for="registration-number" class="form-label"
-              >เลขทะเบียน <span class="required">*</span></label
-            >
-            <input readonly type="text" id="registration_number" name="registrationNumber" class="form-input" placeholder="เลขทะเบียน" required />
+            <label for="registration-number" class="form-label">เลขทะเบียน <span class="required">*</span></label>
+            <input readonly type="text" id="registration_number" name="registrationNumber" class="form-input"
+              placeholder="เลขทะเบียน" required />
           </div>
         </div>
 
         <div class="form-row-3">
           <div class="form-group">
-            <label for="year" class="form-label"
-              >ชั้นปี <span class="required">*</span></label
-            >
+            <label for="year" class="form-label">ชั้นปี <span class="required">*</span></label>
             <input type="text" id="year" name="year" class="form-input" placeholder="ชั้นปี" required />
           </div>
           <div class="form-group">
-            <label for="faculty" class="form-label"
-              >คณะ <span class="required">*</span></label
-            >
+            <label for="faculty" class="form-label">คณะ <span class="required">*</span></label>
             <input readonly type="text" id="faculty" name="faculty" class="form-input" placeholder="คณะ" required />
           </div>
           <div class="form-group">
-            <label for="department" class="form-label"
-              >สาขาวิชา <span class="required">*</span></label
-            >
+            <label for="department" class="form-label">สาขาวิชา <span class="required">*</span></label>
             <input readonly type="text" id="department" name="department" class="form-input" placeholder="สาขาวิชา" required />
           </div>
         </div>
@@ -105,10 +88,10 @@
         </div>
 
         <div class="form-group">
-          <label readonly for="email" class="form-label"
+          <label for="email" class="form-label"
             >Email <span class="required">*</span></label
           >
-          <input type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
+          <input readonly type="email" id="email" name="email" class="form-input" placeholder="email@example.com" required />
         </div>
 
         <div class="form-row">
@@ -221,13 +204,54 @@
           <ul id="fileList"></ul>
         </div>
 
-        <div class="button-group">
-          <button type="button" class="draft-button">บันทึกแบบร่าง</button>
-          <button type="submit" class="submit-button">ส่งคำร้อง</button>
+        <div class="form-group">
+          <label for="advisorReason" class="form-label">
+            เหตุผลของอาจารย์ที่ปรึกษา
+          </label>
+          <textarea
+            id="advisorReason"
+            name="advisorReason"
+            class="form-input explanation-box"
+            readonly
+          ></textarea>
         </div>
+        <div class="form-group">
+          <label for="instructorReason" class="form-label">
+              เหตุผลของอาจารย์ผู้สอน
+          </label>
+          <textarea
+              id="instructorReason"
+              name="instructorReason"
+              class="form-input explanation-box"
+              readonly
+          ></textarea>
+      </div>
+      
+      <div class="form-group">
+          <label for="deanReason" class="form-label">
+              เหตุผลของคณบดี
+          </label>
+          <textarea
+              id="deanReason"
+              name="deanReason"
+              class="form-input explanation-box"
+              readonly
+          ></textarea>
+      </div>
+      <div class="form-group rejection-reason-container hidden">
+        <label for="rejectionReason" class="form-label">
+            เหตุผลการปฏิเสธ
+        </label>
+        <textarea
+            id="rejectionReason"
+            name="rejectionReason"
+            class="form-input explanation-box"
+            readonly
+        ></textarea>
+      </div>
       </form>
     </div>
-    <script src="/js/form.js"></script>
+    <script src="/js/form_view.js"></script>
     <script src="../js/fileattachment.js"></script>
   </body>
 </html>
