--- a/frontend/public/form/withdraw_course.html
+++ b/frontend/public/form/withdraw_course.html
@@ -196,14 +196,9 @@
           <textarea id="additional_explanation" name="additionalExplanation" class="form-input explanation-box" placeholder="ชี้แจงเหตุผลเพิ่มเติม" required></textarea>
         </div>
 
-        <!-- ปุ่มแนบไฟล์ -->
-        <button id="attachButton" class="attach-button">
-          <img src="../img/tdesign_attach.png" alt="Attach Icon">
-          แนบไฟล์
-        </button>
 
         <!-- กล่องอัปโหลด -->
-        <div id="uploadBox" class="upload-container hidden">
+        <div id="uploadBox" class="upload-container">
           <h3>อัปโหลดไฟล์</h3>
           <div class="upload-box">
             <div class="icon">
@@ -216,7 +211,7 @@
         </div>
 
         <!-- แสดงรายการไฟล์ที่แนบ -->
-        <div id="fileInfo" class="file-info hidden">
+        <div id="fileInfo" class="file-info">
           <p>ไฟล์ที่แนบ:</p>
           <ul id="fileList"></ul>
         </div>
