--- a/frontend/public/form/resign.html
+++ b/frontend/public/form/resign.html
@@ -130,14 +130,8 @@
             </div>
           </div>
 
-          <!-- ปุ่มแนบไฟล์ -->
-        <button id="attachButton" class="attach-button">
-          <img src="../img/tdesign_attach.png" alt="Attach Icon">
-          แนบไฟล์
-        </button>
-
         <!-- กล่องอัปโหลด -->
-        <div id="uploadBox" class="upload-container hidden">
+        <div id="uploadBox" class="upload-container">
           <h3>อัปโหลดไฟล์</h3>
           <div class="upload-box">
             <div class="icon">
@@ -150,7 +144,7 @@
         </div>
 
         <!-- แสดงรายการไฟล์ที่แนบ -->
-        <div id="fileInfo" class="file-info hidden">
+        <div id="fileInfo" class="file-info">
           <p>ไฟล์ที่แนบ:</p>
           <ul id="fileList"></ul>
         </div>
