feat: add CORS support and update file upload box visibility across multiple pages

--- a/frontend/public/Dean/delayed_registration.html
+++ b/frontend/public/Dean/delayed_registration.html
@@ -155,7 +155,7 @@
             placeholder="ชี้แจงเหตุผลเพิ่มเติม" required></textarea>
         </div>
   <!-- กล่องอัปโหลด -->
-  <div id="uploadBox" class="upload-container">
+  <div id="uploadBox" class="upload-container hidden">
     <h3>อัปโหลดไฟล์</h3>
     <div class="upload-box">
       <div class="icon">
@@ -172,9 +172,6 @@
     <p>ไฟล์ที่แนบ:</p>
     <ul id="fileList"></ul>
   </div>
-
-          <!-- ปุ่มอัปโหลดไฟล์ -->
-          <button id="submitFilesButton" class="submit-files-button hidden">อัปโหลดไฟล์</button>
 
           <div class="button-group">
             <button type="button" class="approve-button">อนุมัติ</button>
