--- a/frontend/public/Dean/reg_request.html
+++ b/frontend/public/Dean/reg_request.html
@@ -179,7 +179,7 @@
           <textarea id="additional_explanation" name="additionalExplanation" class="form-input explanation-box" placeholder="ชี้แจงเหตุผลเพิ่มเติม" required></textarea>
         </div>
   <!-- กล่องอัปโหลด -->
-  <div id="uploadBox" class="upload-container">
+  <div id="uploadBox" class="upload-container hidden">
     <h3>อัปโหลดไฟล์</h3>
     <div class="upload-box">
       <div class="icon">
