--- a/frontend/public/Dean/resign.html
+++ b/frontend/public/Dean/resign.html
@@ -130,7 +130,7 @@
             </div>
           </div>
   <!-- กล่องอัปโหลด -->
-  <div id="uploadBox" class="upload-container">
+  <div id="uploadBox" class="upload-container hidden">
     <h3>อัปโหลดไฟล์</h3>
     <div class="upload-box">
       <div class="icon">
@@ -147,7 +147,7 @@
     <p>ไฟล์ที่แนบ:</p>
     <ul id="fileList"></ul>
   </div>
-  
+
         <div class="button-group">
           <button type="button" class="approve-button">อนุมัติ</button>
           <button type="button" class="reject-button">ไม่อนุมัติ</button>
