--- a/frontend/public/Dean/withdraw_course.html
+++ b/frontend/public/Dean/withdraw_course.html
@@ -198,7 +198,7 @@
         </div>
 
         <!-- กล่องอัปโหลด -->
-        <div id="uploadBox" class="upload-container">
+        <div id="uploadBox" class="upload-container hidden">
           <h3>อัปโหลดไฟล์</h3>
           <div class="upload-box">
             <div class="icon">
