--- a/frontend/public/Advisor/delayed_registration.html
+++ b/frontend/public/Advisor/delayed_registration.html
@@ -155,7 +155,7 @@
             placeholder="ชี้แจงเหตุผลเพิ่มเติม" required></textarea>
         </div>
   <!-- กล่องอัปโหลด -->
-  <div id="uploadBox" class="upload-container">
+  <div id="uploadBox" class="upload-container hidden">
     <h3>อัปโหลดไฟล์</h3>
     <div class="upload-box">
       <div class="icon">
