--- a/frontend/public/Advisor/resign.html
+++ b/frontend/public/Advisor/resign.html
@@ -130,7 +130,7 @@
             </div>
           </div>
   <!-- กล่องอัปโหลด -->
-  <div id="uploadBox" class="upload-container">
+  <div id="uploadBox" class="upload-container hidden">
     <h3>อัปโหลดไฟล์</h3>
     <div class="upload-box">
       <div class="icon">
