--- a/frontend/public/form_view/resign.html
+++ b/frontend/public/form_view/resign.html
@@ -130,6 +130,19 @@
             </div>
           </div>
 
+  <!-- กล่องอัปโหลด -->
+  <div id="uploadBox" class="upload-container hidden">
+    <h3>อัปโหลดไฟล์</h3>
+    <div class="upload-box">
+      <div class="icon">
+        <img src="../img/upload.png" alt="upload">
+      </div>
+      <p>Drag or drop your files here</p>
+      <button id="browseButton">browse</button>
+      <input type="file" id="fileInput" multiple hidden>
+    </div>
+  </div>
+
   <!-- แสดงรายการไฟล์ที่แนบ -->
   <div id="fileInfo" class="file-info">
     <p>ไฟล์ที่แนบ:</p>
